--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!--Meta Keywords and Description-->
     <meta name="keywords" content="ClimbPass">
-    <meta name="description" content="ClimbPass is a the super climbing platform for cheaper passes and match with fellow climbers.">
+    <meta name="description" content="ClimbPass is the super climbing platform for all things climbing related.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 
     <!--Favicon-->
@@ -133,13 +133,13 @@
             <div class="col-38">
 
                 <div class="section-heading">
-                    <h1>CHEAPER CLIMBING PASSES</h1>
-                    <h2>ClimbPass is a the super climbing platform for cheaper passes and match with fellow climbers. </h2>
+                    <h1>CLIMBING IS A LIFESTYLE.</h1>
+                    <h2>We launched our flagship product - off-peak passes!  </h2>
                 </div>
 
                 <!--Call to Action-->
                 <!-- WIP -->
-                <a href="http://bit.ly/climboffpeak" target="_blank" class="button">Book your CimbPass now!</a>
+                <a href="http://bit.ly/climboffpeak" target="_blank" class="button">Book with ClimbPass today!</a>
                 <!--End Call to Action-->
 
             </div>
@@ -159,8 +159,8 @@
                     <div class="section-heading">
                         <h3>ABOUT</h3>
                         <h2 class="section-title">About ClimbPass</h2>
-                        <p class="section-subtitle">ClimbPass is a climbing based platform, for climbers by climbers, and enables climbing to be more
-                        accessible to the masses.</p>
+                        <p class="section-subtitle">Discover new gyms, buy cheaper passes, find climbing buddies and 
+                            sell your climbing merchandise all on ClimbPass.</p>
                     </div>
 
                 </div>
@@ -175,7 +175,7 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>Dynamic discounted pricing</h4>
-                            <p>Using a dynamic pricing model, prices go as low as 50% off its original prices</p>
+                            <p>Using a dynamic pricing model, prices go as low as 50% off its original prices, depending on how crowded the gym is.</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -189,7 +189,7 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>Less crowded gyms</h4>
-                            <p>Skip the crowd! We offer passes during off peak hours so that you'll have more space to yourself.</p>
+                            <p>Skip the crowd! We offer passes during off peak hours so that you won't feel as if so many people are watching you climb.</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -203,7 +203,7 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>Marketplace</h4>
-                            <p>Got some extra climbing equipment you don't need? Or spare multipasses you can't finish using. List them on our platform.</p>
+                            <p>Got some extra climbing equipment you don't need? Or spare multipasses you can't finish using? List them on our platform.</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -257,10 +257,8 @@
                 <div class="col-3">
                     <!--User Testimonial-->
                     <blockquote class="testimonial text-right bigtest">
-                        <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua</q>
-                        <footer>— John Doe, Happy Customer</footer>
+                        <q>I was surprised at how easy ClimbPass was to use. Check-in at the gym was seamless, and as a beginner, it was great that I could climb at my own pace without feeling pressured. The routes were surprisingly a lot easier than I had expected to! </q>
+                        <footer>— Dong Wen Qin, Happy Customer</footer>
                     </blockquote>
                     <!-- End of Testimonial-->
                 </div>
@@ -276,20 +274,20 @@
                         <!-- <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p> -->
                     </div>
-                    <p>When climbing breakneck ridge in Cold Spring, New York, Ernest had a taste of what real rock climbing was, 
-                        though he had never tried climbing before. He was on fours, trying to climb over rocks, 
-                        in order to get to the summit. He fell in love with it, and continued to pursue indoor 
+                    <p>Summitting Breakneck Ridge in Cold Spring, New York, Ernest had a taste of what rock climbing was (literally), 
+                        being on all fours, and trying to climb over rocks. 
+                        He fell in love with it, and started to pursue indoor 
                         climbing at gyms such as Brooklyn Boulders and Steep Rock.
                     </p>
                     <p>
-                        Upon coming back to Singapore, Ernest realised then climbing was very expensive. The cheapest way to climb, 
-                        was to get a season pass, but that meant that he was stuck to one gym, 
-                        when all he wanted to do was climb anywhere, anytime.
+                        Upon returning to Singapore, Ernest realised that climbing was an expensive sport. The cheapest way to climb, 
+                        was to get a season pass, but that meant that he was stuck to one gym, as paying for a day pass elsewhere was costly.
+                        
                     </p>
 
                     <p>
                         Hence, ClimbPass was born, a climbing platform to allow climbers to access more gyms at the same price, 
-                        and also introduce climbing to non-climbers.
+                        and also introduce climbing to non-climbers by allowing them to match with more experienced climbers.
                     </p>
                     <!-- Just replace the Video ID "UYJ5IjBRlW8" with the ID of your video on YouTube (Found within the URL) -->
                     <!--DO WE HAVE A VIDEO-->
@@ -317,9 +315,9 @@
                     <div class="section-heading">
                         <h3>PARTNERS</h3>
                         <h2 class="section-title">Gyms we are partnered with!</h2>
-                        <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+                        <p class="section-subtitle">Boulder Movement is located at the CBD area, and has beginner friendly routes. 
+                            T-Hall has a high wall, catered for climbers who aren't afraid of heights and want a taste of climbing outdoors. 
+                            Climber's Lab is a cozy space for both top rope and bouldering enthuasists alike.  </p>
                     </div>
 
                 </div>
@@ -381,7 +379,7 @@
                 <blockquote class="col-4 team-member classic">
                     <img src="images/team-images/team-1.jpg" alt="Ernest"/>
                     <q>When I’m not at a wall, I’m usually hunting for the best third wave coffees, 
-                        preferably bright and acidic, in white-washed </q>
+                        preferably bright and acidic, in white-washed minimalist cafes. </q>
                     <footer>Ernest Teh - Business Development</footer>
                 </blockquote>
                 <!-- End of Team Member-->
@@ -410,7 +408,7 @@
                 <blockquote class="col-4 team-member classic">
                     <img src="images/team-images/jiachen.jpg" alt="Jiachen"/>
                     <q>I love building and making complex systems with real world impact! Im also in love with coffee and I hate javascript so much.</q>
-                    <footer>Liow Jia Chen - Teah Lead</footer>
+                    <footer>Liow Jia Chen - Tech Lead</footer>
                 </blockquote>
                 <!-- End of Team Member-->
 
