--- a/index.html
+++ b/index.html
@@ -397,9 +397,8 @@
                 <!--Team member 3-->
                 <blockquote class="col-4 team-member classic">
                     <img src="images/team-images/team-3.jpg" alt="Yanshiang"/>
-                    <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua</q>
+                    <q>Passionate in Business Analytics, Sustainability and Technology. I am an adventure-seeker and risk taker. 
+                        Failures and setbacks are never pitfalls but rather, learning journeys for me to grow and develop. I love travelling, meeting new people, and dancing Lindy Hop. Say Ciao!</q>
                     <footer>Yeap Yan Shiang - Product Analytics</footer>
                 </blockquote>
                 <!-- End of Team Member-->
