--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
             <div class="col-38">
 
                 <div class="section-heading">
-                    <h1>CLIMBING IS A LIFESTYLE.</h1>
-                    <h2>We launched our flagship product - off-peak passes!  </h2>
+                    <h1>CLIMBING IS FOR EVERYONE.</h1>
+                    <h2>This December, we launched cheaper day passes during off-peak hours, up to 50% off. </h2>
                 </div>
 
                 <!--Call to Action-->
@@ -159,8 +159,7 @@
                     <div class="section-heading">
                         <h3>ABOUT</h3>
                         <h2 class="section-title">About ClimbPass</h2>
-                        <p class="section-subtitle">Discover new gyms, buy cheaper passes, find climbing buddies and 
-                            sell your climbing merchandise all on ClimbPass.</p>
+                        <p class="section-subtitle">Discover new gyms, buy cheaper passes and find climbing buddiestx all on ClimbPass.</p>
                     </div>
 
                 </div>
@@ -189,7 +188,8 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>Less crowded gyms</h4>
-                            <p>Skip the crowd! We offer passes during off peak hours so that you won't feel as if so many people are watching you climb.</p>
+                            <p>Skip the crowd! Emptier gyms means it's less intimidating for beginners who want to try climbing
+                            for the first time without being judged.</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -203,7 +203,8 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>Marketplace</h4>
-                            <p>Got some extra climbing equipment you don't need? Or spare multipasses you can't finish using? List them on our platform.</p>
+                            <p>Got some extra climbing equipment you don't need? Or spare multipasses you can't finish using? 
+                                List them on our platform.</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -257,7 +258,9 @@
                 <div class="col-3">
                     <!--User Testimonial-->
                     <blockquote class="testimonial text-right bigtest">
-                        <q>I was surprised at how easy ClimbPass was to use. Check-in at the gym was seamless, and as a beginner, it was great that I could climb at my own pace without feeling pressured. The routes were surprisingly a lot easier than I had expected to! </q>
+                        <q> As a beginner, I was surprised at how easy ClimbPass was to use. Checking at the gym was seamless, 
+                            and the emptier gyms was great because I could climb at my own pace without feeling pressured. <q> 
+                        <q> The routes were also surprisingly a lot easier than I had expected! </q>
                         <footer>— Dong Wen Qin, Happy Customer</footer>
                     </blockquote>
                     <!-- End of Testimonial-->
@@ -274,19 +277,18 @@
                         <!-- <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p> -->
                     </div>
-                    <p>Summitting Breakneck Ridge in Cold Spring, New York, Ernest had a taste of what rock climbing was (literally), 
-                        being on all fours, and trying to climb over rocks. 
+                    <p>Summitting Breakneck Ridge in Cold Spring, New York, Ernest had a taste of what rock climbing was (literally).
                         He fell in love with it, and started to pursue indoor 
-                        climbing at gyms such as Brooklyn Boulders and Steep Rock.
+                        climbing at gyms such as Brooklyn Boulders and Steep Rock in New York City.
                     </p>
                     <p>
-                        Upon returning to Singapore, Ernest realised that climbing was an expensive sport. The cheapest way to climb, 
-                        was to get a season pass, but that meant that he was stuck to one gym, as paying for a day pass elsewhere was costly.
+                        Returning to Singapore, Ernest realised that the most affordable way to climb, 
+                        was to get a season pass. However, that meant that he was stuck to one gym, as paying for a day pass elsewhere was too costly.
                         
                     </p>
 
                     <p>
-                        Hence, ClimbPass was born, a climbing platform to allow climbers to access more gyms at the same price, 
+                        Hence, ClimbPass was born, a climbing platform to allow climbers to access more gyms at more affordable prices, 
                         and also introduce climbing to non-climbers by allowing them to match with more experienced climbers.
                     </p>
                     <!-- Just replace the Video ID "UYJ5IjBRlW8" with the ID of your video on YouTube (Found within the URL) -->
