--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div class="section-heading">
                         <h3>ABOUT</h3>
                         <h2 class="section-title">About ClimbPass</h2>
-                        <p class="section-subtitle">Discover new gyms, buy cheaper passes and find climbing buddiestx all on ClimbPass.</p>
+                        <p class="section-subtitle">Discover new gyms, buy cheaper passes and find climbing buddies all on ClimbPass.</p>
                     </div>
 
                 </div>
@@ -259,8 +259,8 @@
                     <!--User Testimonial-->
                     <blockquote class="testimonial text-right bigtest">
                         <q> As a beginner, I was surprised at how easy ClimbPass was to use. Checking at the gym was seamless, 
-                            and the emptier gyms was great because I could climb at my own pace without feeling pressured. <q> 
-                        <q> The routes were also surprisingly a lot easier than I had expected! </q>
+                            and the emptier gyms was great because I could climb at my own pace without feeling pressured.
+                        The routes were also surprisingly a lot easier than I had expected! </q>
                         <footer>— Dong Wen Qin, Happy Customer</footer>
                     </blockquote>
                     <!-- End of Testimonial-->
@@ -317,9 +317,7 @@
                     <div class="section-heading">
                         <h3>PARTNERS</h3>
                         <h2 class="section-title">Gyms we are partnered with!</h2>
-                        <p class="section-subtitle">Boulder Movement is located at the CBD area, and has beginner friendly routes. 
-                            T-Hall has a high wall, catered for climbers who aren't afraid of heights and want a taste of climbing outdoors. 
-                            Climber's Lab is a cozy space for both top rope and bouldering enthuasists alike.  </p>
+                        <p class="section-subtitle"> More gyms coming your way in 2020. </p>
                     </div>
 
                 </div>
