--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>Dynamic discounted pricing</h4>
-                            <p>Using a dynamic pricing model, prices go as low as 50% off its original prices, depending on how crowded the gym is.</p>
+                            <p>Depending on how crowded the gym is, prices go as low as 50% off its original prices.</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -189,7 +189,7 @@
                         <div class="icon-block-description">
                             <h4>Less crowded gyms</h4>
                             <p>Skip the crowd! Emptier gyms means it's less intimidating for beginners who want to try climbing
-                            for the first time without being judged.</p>
+                            for the first time.</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
