pre email feature

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a target="_blank" title="behance" href="mailto: climbpass@gmail.com">
+                                <a target="_blank" title="behance" href="mailto: hello@climbpass.co">
                                     <i class="fa fa-at fa-1x"></i><span>Email</span>
                                 </a>
                             </li>
@@ -138,9 +138,18 @@
                 </div>
 
                 <!--Call to Action-->
-                <!-- WIP -->
                 <a href="http://bit.ly/climboffpeak" target="_blank" class="button">Book with ClimbPass today!</a>
+                
+                <!-- <form id="addToMailingList" onclick="addEmailToMailingList()">
+                    Name:<br>
+                    <input type="text" name="firstname"><br>
+                    Email:<br>
+                    <input type="text" name="lastname">
+                </form> 
+                 -->
                 <!--End Call to Action-->
+
+
 
             </div>
 
@@ -257,7 +266,7 @@
                 <!--Content Left Side-->
                 <div class="col-3">
                     <!--User Testimonial-->
-                    <blockquote class="testimonial text-right bigtest">
+                    <blockquote class="team-member text-right bigtest">
                         <q> As a beginner, I was surprised at how easy ClimbPass was to use. Checking at the gym was seamless, 
                             and the emptier gyms was great because I could climb at my own pace without feeling pressured.
                         The routes were also surprisingly a lot easier than I had expected! </q>
@@ -331,7 +340,10 @@
                         <img src="images/partner-images/company-logo2.png" alt="Climbers Lab"/>
                     </a>
                     <a href="http://www.boulderm.com/" class="col-1">
-                        <img src="images/partner-images/company-logo4.png" alt="Boulder Movement"/>
+                        <img src="images/partner-images/company-logo3.png" alt="Boulder Movement"/>
+                    </a>
+                    <a href="http://www.camp5.com/" class="col-1">
+                        <img src="images/partner-images/company-logo4.png" alt="Camp 5"/>
                     </a>
                     <!-- <a href="#" class="col-3">
                         <img src="images/company-images/company-logo4.png" alt="Company"/>
@@ -441,7 +453,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a target="_blank" title="behance" href="mailto: climbpass@gmail.com">
+                                <a target="_blank" title="behance" href="mailto: hello@climbpass.co">
                                     <i class="fa fa-at fa-1x"></i><span>Email</span>
                                 </a>
                             </li>
