--- a/index.html
+++ b/index.html
@@ -113,6 +113,15 @@
                             <li>
                                 <a href="#partners">Partners</a>
                             </li>
+
+                            <li>
+                                <a href="#gallery">Gallery</a>
+                            </li>
+
+                            <li>
+                                <a href="#faq">FAQ</a>
+                            </li>
+
                             <li>
                                 <a href="#team">Team</a>
                             </li>
@@ -142,11 +151,11 @@
                 
                 <!-- <form id="addToMailingList" onclick="addEmailToMailingList()">
                     Name:<br>
-                    <input type="text" name="firstname"><br>
+                    <input type="text" name="name"><br>
                     Email:<br>
-                    <input type="text" name="lastname">
-                </form> 
-                 -->
+                    <input type="text" name="email">
+                </form>  -->
+                
                 <!--End Call to Action-->
 
 
@@ -170,7 +179,6 @@
                         <h2 class="section-title">About ClimbPass</h2>
                         <p class="section-subtitle">Discover new gyms, buy cheaper passes and find climbing buddies all on ClimbPass.</p>
                     </div>
-
                 </div>
 
                 <div class="col-2-3">
@@ -236,27 +244,6 @@
 
         </section>
         <!--End of Introduction-->
-
-
-        <!--Gallery-->
-        <!-- <aside id="gallery" class="row text-center scrollto clearfix" data-featherlight-gallery
-                 data-featherlight-filter="a">
-
-                <a href="images/gallery-images/gallery-image-1.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-                   data-wow-delay="0.1s"><img src="images/gallery-images/gallery-image-1.jpg" alt="Landing Page"/></a>
-                <a href="images/gallery-images/gallery-image-2.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-                   data-wow-delay="0.3s"><img src="images/gallery-images/gallery-image-2.jpg" alt="Landing Page"/></a>
-                <a href="images/gallery-images/gallery-image-3.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-                   data-wow-delay="0.5s"><img src="images/gallery-images/gallery-image-3.jpg" alt="Landing Page"/></a>
-                <a href="images/gallery-images/gallery-image-4.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-                   data-wow-delay="1.1s"><img src="images/gallery-images/gallery-image-4.jpg" alt="Landing Page"/></a>
-                <a href="images/gallery-images/gallery-image-5.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-                   data-wow-delay="0.9s"><img src="images/gallery-images/gallery-image-5.jpg" alt="Landing Page"/></a>
-                <a href="images/gallery-images/gallery-image-6.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-                   data-wow-delay="0.7s"><img src="images/gallery-images/gallery-image-6.jpg" alt="Landing Page"/></a>
-
-        </aside> -->
-        <!--End of Gallery-->
 
         <!--Content Section-->
         <div id="services" class="scrollto clearfix">
@@ -377,6 +364,101 @@
         </section>
         <!--End of Partners-->
 
+        <!--Gallery-->
+        <!-- <aside id="gallery" class="row text-center scrollto clearfix" data-featherlight-gallery
+                 data-featherlight-filter="a">
+
+                <a href="images/gallery-images/gallery-image-1.jpg" data-featherlight="image" class="col-3 wow fadeIn"
+                   data-wow-delay="0.1s"><img src="images/gallery-images/gallery-image-1.jpg" alt="Landing Page"/></a>
+                <a href="images/gallery-images/gallery-image-2.jpg" data-featherlight="image" class="col-3 wow fadeIn"
+                   data-wow-delay="0.3s"><img src="images/gallery-images/gallery-image-2.jpg" alt="Landing Page"/></a>
+                <a href="images/gallery-images/gallery-image-3.jpg" data-featherlight="image" class="col-3 wow fadeIn"
+                   data-wow-delay="0.5s"><img src="images/gallery-images/gallery-image-3.jpg" alt="Landing Page"/></a>
+                <a href="images/gallery-images/gallery-image-4.jpg" data-featherlight="image" class="col-3 wow fadeIn"
+                   data-wow-delay="1.1s"><img src="images/gallery-images/gallery-image-4.jpg" alt="Landing Page"/></a>
+                <a href="images/gallery-images/gallery-image-5.jpg" data-featherlight="image" class="col-3 wow fadeIn"
+                   data-wow-delay="0.9s"><img src="images/gallery-images/gallery-image-5.jpg" alt="Landing Page"/></a>
+                <a href="images/gallery-images/gallery-image-6.jpg" data-featherlight="image" class="col-3 wow fadeIn"
+                   data-wow-delay="0.7s"><img src="images/gallery-images/gallery-image-6.jpg" alt="Landing Page"/></a>
+
+        </aside> -->
+        <!--End of Gallery-->
+
+        <!--FAQ-->
+        <section id="faq" class="introduction scrollto">
+
+            <div class="row no-padding-bottom clearfix">
+
+                <div class="col-3">
+                    <div class="section-heading">
+                        <h3>FAQ</h3>
+                        <h2 class="section-title">Frequently Asked Questions</h2>
+                        <p class="section-subtitle">Some common questions</p>
+                    </div>
+                </div>
+
+                <div class="col-2-3">
+
+                    <div class="col-1 icon-block">
+                        <div class="icon-block-description">
+                            <h4>1. Who is ClimbPass for?</h4>
+                            <p>ClimbPass is for everyone. Whether you're a complete beginner to climbing, or have done 
+                                it a few times, ClimbPass is for you!
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1 icon-block">
+                        <div class="icon-block-description">
+                            <h4>2. How does ClimbPass work?</h4>
+                            <p>
+                                Buy a pass on our site, we will send you an email confirmation with your unique code. 
+                                Show the unique code to the gym, and you can start climbing.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1 icon-block">
+                        <div class="icon-block-description">
+                            <h4>3. Is equipment provided?</h4>
+                            <p>
+                                No, equipment is separate. Climbing shoes typically costs 4-6 bucks for rental.
+                                If you want to try the high wall, you also have to rent the belay and device which will 
+                                cost about 4-6 bucks.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1 icon-block">
+                        <div class="icon-block-description">
+                            <h4>4. Can I wear my own shoes to climb?</h4>
+                            <p>
+                                No, you may not wear your own shoes to climb. 
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1 icon-block">
+                        <div class="icon-block-description">
+                            <h4>5. Is climbing safe?</h4>
+                            <p>
+                                Climbing is a safe sport, once you have learnt the basic techniques of falling correctly.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1 icon-block">
+                        <div class="icon-block-description">
+                            <h4>6. I can't do pull ups, how can I climb?</h4>
+                            <p>
+                                In climbing, the routes are graded upon difficulty, from V0 to V8 in ascending order of 
+                                difficulty. V0 routes are extremely beginner friendly to begin with, almost as easy as 
+                                climbing a ladder!
+                            </p>
+                        </div>
+                    </div>
+            </div>
+
+
+        </section>
+        <!--End of Introduction-->
+
         <!--Team-->
         <aside id="team" class="scrollto text-center" data-enllax-ratio=".2">
 
@@ -478,7 +560,6 @@
 <script src="js/images-loaded.min.js"></script>
 <script src="js/lightbox.min.js"></script>
 <script src="js/site.js"></script>
-
 
 </body>
 </html>
