--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
                 <div class="section-heading">
                     <h1>CLIMBING IS FOR EVERYONE.</h1>
-                    <h2>This December, we launched cheaper day passes during off-peak hours, up to 50% off. </h2>
+                    <h2>This December, enjoy up to 50% off climbing passes during off-peak hours, with ClimbPass. </h2>
                 </div>
 
                 <!--Call to Action-->
@@ -176,8 +176,8 @@
                 <div class="col-3">
                     <div class="section-heading">
                         <h3>ABOUT</h3>
-                        <h2 class="section-title">About ClimbPass</h2>
-                        <p class="section-subtitle">Discover new gyms, buy cheaper passes and find climbing buddies all on ClimbPass.</p>
+                        <h2 class="section-title">ClimbPass Perks</h2>
+                        <p class="section-subtitle">ClimbPass lets you discover new gyms, buy cheaper passes and find climbing buddies -- all on one platform!</p>
                     </div>
                 </div>
 
@@ -205,8 +205,8 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>Less crowded gyms</h4>
-                            <p>Skip the crowd! Emptier gyms means it's less intimidating for beginners who want to try climbing
-                            for the first time.</p>
+                            <p>Skip the crowd! Emptier gyms means less intimidation for beginners who want to try climbing
+                            for the first time and more freedom for advanced climbers to try out new routes.</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -257,7 +257,7 @@
                         <q> As a beginner, I was surprised at how easy ClimbPass was to use. Checking at the gym was seamless, 
                             and the emptier gyms was great because I could climb at my own pace without feeling pressured.
                         The routes were also surprisingly a lot easier than I had expected! </q>
-                        <footer>— Dong Wen Qin, Happy Customer</footer>
+                        <footer>— Dong Wen Qin</footer>
                     </blockquote>
                     <!-- End of Testimonial-->
                 </div>
@@ -312,8 +312,8 @@
 
                     <div class="section-heading">
                         <h3>PARTNERS</h3>
-                        <h2 class="section-title">Gyms we are partnered with!</h2>
-                        <p class="section-subtitle"> More gyms coming your way in 2020. </p>
+                        <h2 class="section-title">Partnering Gyms</h2>
+                        <p class="section-subtitle">Use your ClimbPass at these gyms. More gyms coming your way in 2020. </p>
                     </div>
 
                 </div>
