--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
                 <div class="section-heading">
                     <h1>CLIMBING IS FOR EVERYONE.</h1>
-                    <h2>This December, enjoy up to 50% off climbing passes during off-peak hours, with ClimbPass. </h2>
+                    <h2>This December, enjoy up to 50% off climbing passes during off-peak hours, <b>with ClimbPass</b>. </h2>
                 </div>
 
                 <!--Call to Action-->
@@ -422,8 +422,8 @@
                             <h4>3. Is equipment provided?</h4>
                             <p>
                                 No, equipment is separate. Climbing shoes typically costs 4-6 bucks for rental.
-                                If you want to try the high wall, you also have to rent the belay and device which will 
-                                cost about 4-6 bucks.
+                                If you want to try the high wall, you also have to rent the harness and belay device. This  
+                                cost about 4-6 bucks on average.
                             </p>
                         </div>
                     </div>
@@ -431,7 +431,8 @@
                         <div class="icon-block-description">
                             <h4>4. Can I wear my own shoes to climb?</h4>
                             <p>
-                                No, you may not wear your own shoes to climb. 
+                                No, you may not wear your own shoes to climb. However, there are shoe rentals at every gym; do remember to bring 
+                                socks for hygiene purposes.
                             </p>
                         </div>
                     </div>
@@ -439,17 +440,26 @@
                         <div class="icon-block-description">
                             <h4>5. Is climbing safe?</h4>
                             <p>
-                                Climbing is a safe sport, once you have learnt the basic techniques of falling correctly.
+                                Climbing is a sport with some risks, but they can be mitigated with safety precautions and good practices. 
+                                Safety mats are also present to cushion your fall when bouldering. 
                             </p>
                         </div>
                     </div>
                     <div class="col-1 icon-block">
                         <div class="icon-block-description">
-                            <h4>6. I can't do pull ups, how can I climb?</h4>
+                            <h4>6. I can't do pull ups, how can I even climb?</h4>
                             <p>
                                 In climbing, the routes are graded upon difficulty, from V0 to V8 in ascending order of 
                                 difficulty. V0 routes are extremely beginner friendly to begin with, almost as easy as 
                                 climbing a ladder!
+                            </p>     
+                             
+                    <div class="col-1 icon-block">
+                        <div class="icon-block-description">
+                            <h4>7. Should I boulder or top rope first?</h4>
+                            <p>
+                                Every person is different, some people enjoy the exhilaration of climbing high and opt for the top rope option.
+                                If you are afraid of heights, bouldering might be a good way to start.
                             </p>
                         </div>
                     </div>
