--- a/index.html
+++ b/index.html
@@ -453,7 +453,8 @@
                                 difficulty. V0 routes are extremely beginner friendly to begin with, almost as easy as 
                                 climbing a ladder!
                             </p>     
-                             
+                         </div>
+                    </div>  
                     <div class="col-1 icon-block">
                         <div class="icon-block-description">
                             <h4>7. Should I boulder or top rope first?</h4>
