--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                         <q> As a beginner, I was surprised at how easy ClimbPass was to use. Checking at the gym was seamless, 
                             and the emptier gyms was great because I could climb at my own pace without feeling pressured.
                         The routes were also surprisingly a lot easier than I had expected! </q>
-                        <footer>— Dong Wen Qin</footer>
+                        <footer>— Dong Wen Qin, beginner climber</footer>
                     </blockquote>
                     <!-- End of Testimonial-->
                 </div>
