--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                             <b>Online Payment</b>
                     </div>
                     
-                    <q>Make payment via PayNow/Paylah at the designated number on the Google forms.
+                    <q>Make payment via PayNow at the designated number on the Google forms.
                     </q>
                 </blockquote>
                 <!-- End of Team Member-->
