--- a/index.html
+++ b/index.html
@@ -570,10 +570,8 @@
 
 
     <!--Footer-->
-    <footer id="landing-footer" class="clearfix">
+    <!-- <footer id="landing-footer" class="clearfix">
         <div class="row clearfix">
-
-            <!--Social Icons in Footer-->
             <ul class="social-icons">
                             <li>
                                 <a target="_blank" title="Facebook" href="https://www.facebook.com/climbpass">
@@ -596,9 +594,8 @@
                                 </a>
                             </li>
                         </ul>
-            <!--End of Social Icons in Footer-->
         </div>
-    </footer>
+    </footer> -->
     <!--End of Footer-->
 
 </div>
