--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="col-38">
 
                 <div class="section-heading">
-                    <h1>CLIMBING IS FOR EVERYONE.</h1>
+                    <h1>CLIMBING IS PROBLEM SOLVING <b> IN 3D </b>.</h1>
                     <h2>This December, enjoy up to 50% off climbing passes during off-peak hours, <b>with ClimbPass</b>. </h2>
                 </div>
 
@@ -317,7 +317,7 @@
 
                 <div class="section-heading">
                     <h3>HOW IT WORKS</h3>
-                    <h2 class="section-title">So How Does ClimbPass Actually Work?</h2>
+                    <h2 class="section-title">4 simple steps</h2>
                 </div>
 
                 <!--Step 1-->
@@ -339,7 +339,7 @@
                             <b>Step 2: Online Payment</b>
                     </div>
                     
-                    <div>Make payment via PayNow at the designated number on the Google forms.
+                    <div>Make payment via PayNow at the designated number on the Google form.
                     <div>
                 </blockquote>
                 <!-- End of Team Member-->
@@ -455,18 +455,9 @@
 
                     <div class="col-1 icon-block">
                         <div class="icon-block-description">
-                            <h4>2. How does ClimbPass work?</h4>
+                            <h4>2. Is equipment provided?</h4>
                             <p>
-                                Buy a pass on our site, we will send you an email confirmation with your unique code. 
-                                Show the unique code to the gym, and you can start climbing.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-1 icon-block">
-                        <div class="icon-block-description">
-                            <h4>3. Is equipment provided?</h4>
-                            <p>
-                                No, equipment is separate. Climbing shoes typically costs 4-6 bucks for rental.
+                                No, equipment is not included when you buy with ClimbPass. Climbing shoes typically costs 4-6 bucks for rental.
                                 If you want to try the high wall, you also have to rent the harness and belay device. This  
                                 cost about 4-6 bucks on average.
                             </p>
@@ -474,7 +465,7 @@
                     </div>
                     <div class="col-1 icon-block">
                         <div class="icon-block-description">
-                            <h4>4. Can I wear non-climbing shoes to climb?</h4>
+                            <h4>3. Can I wear non-climbing shoes to climb?</h4>
                             <p>
                                 No, only climbing shoes are allowed in climbing gyms. However, there are shoe rentals at every gym; do remember to bring 
                                 socks for hygiene purposes.
@@ -483,7 +474,7 @@
                     </div>
                     <div class="col-1 icon-block">
                         <div class="icon-block-description">
-                            <h4>5. Is climbing safe?</h4>
+                            <h4>4. Is climbing safe?</h4>
                             <p>
                                 Climbing is a sport with some risks, but they can be mitigated with safety precautions and good practices. 
                                 Safety mats are also present to cushion your fall when bouldering. 
@@ -492,7 +483,7 @@
                     </div>
                     <div class="col-1 icon-block">
                         <div class="icon-block-description">
-                            <h4>6. I can't do pull ups, how can I even climb?</h4>
+                            <h4>5. I can't do pull ups, how can I even climb?</h4>
                             <p>
                                 In climbing, the routes are graded upon difficulty, from V0 to V8 in ascending order of 
                                 difficulty. V0 routes are extremely beginner friendly to begin with, almost as easy as 
@@ -502,7 +493,7 @@
                     </div>  
                     <div class="col-1 icon-block">
                         <div class="icon-block-description">
-                            <h4>7. Should I boulder or top rope first?</h4>
+                            <h4>6. Should I boulder or top rope first?</h4>
                             <p>
                                 Every person is different, some people enjoy the exhilaration of climbing high and opt for the top rope option.
                                 If you are afraid of heights, bouldering might be a good way to start.
@@ -522,7 +513,7 @@
 
                 <div class="section-heading">
                     <h3>TEAM</h3>
-                    <h2 class="section-title">MEET THE TEAM</h2>
+                    <h2 class="section-title">THE FACES BEHIND CLIMBPASS</h2>
                 </div>
 
                 <!--Team member 1-->
