--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="col-38">
 
                 <div class="section-heading">
-                    <h1>CLIMBING IS PROBLEM SOLVING <b> IN 3D </b>.</h1>
+                    <h1>CLIMBING IS PROBLEM SOLVING IN 3D.</h1>
                     <h2>This December, enjoy up to 50% off climbing passes during off-peak hours, <b>with ClimbPass</b>. </h2>
                 </div>
 
@@ -513,7 +513,7 @@
 
                 <div class="section-heading">
                     <h3>TEAM</h3>
-                    <h2 class="section-title">THE FACES BEHIND CLIMBPASS</h2>
+                    <h2 class="section-title">MEET THE TEAM</h2>
                 </div>
 
                 <!--Team member 1-->
