--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="col-38">
 
                 <div class="section-heading">
-                    <h1>CLIMBING IS PROBLEM SOLVING IN 3D.</h1>
+                    <h1>CLIMBING IS FOR EVERYONE.</h1>
                     <h2>This December, enjoy up to 50% off climbing passes during off-peak hours, <b>with ClimbPass</b>. </h2>
                 </div>
 
