--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                 <div class="col-3">
                     <!--User Testimonial-->
                     <blockquote class="team-member text-right bigtest">
-                        <q> As a beginner, I was surprised at how easy ClimbPass was to use. Checking at the gym was seamless, 
+                        <q> As a beginner, I was surprised at how easy ClimbPass was to use. Checking in at the gym was seamless, 
                             and the emptier gyms was great because I could climb at my own pace without feeling pressured.
                         The routes were also surprisingly a lot easier than I had expected! </q>
                         <footer>— Dong Wen Qin, beginner climber</footer>
