Nigel's Description Edits

--- a/index.html
+++ b/index.html
@@ -528,9 +528,9 @@
                 <!--Team member 2-->
                 <blockquote class="col-4 team-member classic">
                     <img src="images/team-images/team-2.jpg" alt="Nigel"/>
-                    <q>Enigmatic, pragmatic and most importantly, enthusiastic. Nigel is all about doing business 
-                        effectively and efficiently, getting things done in a manner which avoids all unnecessary 
-                        troubles through application of his relevant legal knowledge.</q>
+                    <q>Enigmatic, pragmatic and most importantly, enthusiastic. I'm all about doing 
+                        business effectively and efficiently and avoiding all unnecessary troubles 
+                        by applying relevant legal knowledge.</q>
                     <footer>Nigel Cheong - Legal & Finance</footer>
                 </blockquote>
                 <!-- End of Team Member-->
