Changing email info
Changing from hello@climbpass.co to info@climbpass.co

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a target="_blank" title="behance" href="mailto: hello@climbpass.co">
+                                <a target="_blank" title="behance" href="mailto: info@climbpass.co">
                                     <i class="fa fa-at fa-1x"></i><span>Email</span>
                                 </a>
                             </li>
